@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-10T08:26:56Z",
+  "timestamp" : "2022-06-11T01:57:07Z",
   "count_outdated" : 504,
   "uniques_outdated" : 284,
-  "count" : 629,
+  "count" : 630,
   "uniques" : 325,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
